fix: enable annotation processing explicitly
Address the following warning and ensure this code will keep building in
JDK >=22:

```
[INFO] Annotation processing is enabled because one or more processors were found
  on the class path. A future release of javac may disable annotation processing
  unless at least one processor is specified by name (-processor), or a search
  path is specified (--processor-path, --processor-module-path), or annotation
  processing is enabled explicitly (-proc:only, -proc:full).
  Use -Xlint:-options to suppress this message.
  Use -proc:none to disable annotation processing.
```

Fixes #99

Signed-off-by: Erik Swanson <erik@retailnext.net>